# sotg-calculator

./: .dockerignore  .gitignore  README.md  app.py  fly.toml  pyproject.toml  requirements.txt  scorer.py
static/css/: styles.css
static/js/: download-buttons.js
templates/: about.html  base.html.jinja  column-selection-form.html.jinja  columns.html.jinja  demo.html  index.html  index.html.jinja  rankings.html.jinja  read-more-button.html.jinja  score.html.jinja
