[tool.poetry]
name = "sotg-calculator"
version = "0.1.0"
description = ""
authors = ["Puneeth Chaganti <punchagan@muse-amuse.in>"]
license = "GNU AGPL 3.0"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"
mistune = "^2.0.3"
pandas = "^1.4.2"
requests = "^2.27.1"
gunicorn = "^20.1.0"
cryptography = "^39.0.1"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
